# carbon-aware-scheduler-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  to_describe.md
.github/workflows/: ci.yml  deploy.yml
infra/: .terraform.lock.hcl  README.md  alarms.tf  ecr.tf  ecs.tf  github_actions.tf  iam.tf  locals.tf  network.tf  outputs.tf  providers.tf  secrets.tf  static_site.tf  terraform.tf  terraform.tfvars.example  variables.tf
planning/: incremental-aws-demo-build.md
schemas/: carbon_intensity_requests.py
site/: index.html  styles.css
src/carbon_intensity/: __init__.py  agent.py  api_client.py  get_from_api.py  open_meteo.py  prompts.py  retry_session.py
src/carbon_intensity/web/: __init__.py  app.py  lambda_handler.py  snapshot_lambda_handler.py
tests/: test_agent_run.py  test_app.py  test_open_meteo.py  test_web_app.py
