[project]
name = "carbon-aware-scheduler-agent"
version = "0.1.0"
description = "Carbon-aware scheduling agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["^\\.venv/", "^build/", "^dist/"]
