[project]
name = "carbon-aware-scheduler-agent"
version = "0.1.0"
description = "Carbon-aware scheduling agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.45",
    "fastapi>=0.115",
    "mangum>=0.19",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.8",
    "types-requests>=2.32",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/carbon_intensity/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
exclude = ["^\\.venv/", "^build/", "^dist/"]
